Fixed Chrome 48 flex overflow issue

--- a/src/WebComponents/PersistentObject/persistent-object.scss
+++ b/src/WebComponents/PersistentObject/persistent-object.scss
@@ -30,6 +30,8 @@ $tabsBG: #f1f1f1;
 
     .content {
         .detail {
+            min-width: 0;
+            
             vi-persistent-object-tab-presenter {
                 margin: 1px 1px 1px 0;
             }
